--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
     --color--principal: #000000;
     --color--background: #F4F4F4;
     --color--box: #ECE4E4;
+    --color--button: #2351FB;
 }
 
 .body{
@@ -69,7 +70,7 @@ nav{
 }
 
 .container{
-    max-width: 1600px;
+    max-width: 1700px;
     margin: auto;
     padding: 3rem;
 }
@@ -137,6 +138,128 @@ nav{
 }
 
 .img-project{
-    border-color: #000000;
-    border: 12px;
+    margin: auto;
+    align-items: center;
+    max-width: 100%;
+    border-radius: 20px;
+    box-shadow: 8px 4px #3a3939;
+}
+
+.form{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.input-box-phone{
+    position: absolute;
+    margin-left: 60vh;
+}
+
+.phone{
+    display: flex;
+    font-family: var(--font--principal);
+    font-size: 20px;
+    margin: 0.6rem 0;
+    padding: 0.8rem 5rem;
+    border: none;
+    border-radius: 60px;
+    background-color: var(--color--box);
+}
+
+.input-box-phone label{
+    font-family: var(--font--principal);
+    font-size: 20px;
+}
+
+
+
+.title-form{
+    font-family: var(--font--principal);
+    margin: 6rem 2rem;
+    text-align: center;
+    padding: 12px;
+}
+
+.input-box label{
+    font-family: var(--font--principal);
+    font-size: 20px;
+}
+
+.text {
+    font-family: var(--font--principal);
+    font-size: 30px;
+    margin: 0.6rem 0;
+    padding: 0.8rem 5rem;
+    border: none;
+    border-radius: 60px;
+    background-color: var(--color--box);
+}
+
+
+.textarea{
+    display: flex;
+    font-family: var(--font--principal);
+    font-size: 30px;
+    margin: 0.6rem 0;
+    padding: 5rem 5rem;
+    border: none;
+    border-radius: 60px;
+    background-color: var(--color--box);
+    resize: none;
+}
+
+.btn-send button{
+   margin: 0rem 8rem;
+   cursor: pointer;
+}
+
+.btn{
+    background-color: var(--color--button);
+    border: 2px solid white;
+    border-radius: 60px;
+    color: white;
+    font-family: var(--font--principal);
+    padding: 10px 90px;
+}
+.container-figure {
+    position: relative; 
+}
+
+.container-figure img {
+    position: absolute; 
+    bottom: 0vh; 
+    left: 60vh; 
+}
+
+.line{
+    position: relative;
+    left: 50vh;
+    width: 50%; 
+    height: 1px; 
+    background-color: var(--color--principal); 
+    margin: 90px 20px 20px 20px; 
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.container-footer{
+    display: flex;
+    justify-content: space-around;
+    padding-left: 30vh;
+}
+
+.container-footer h3{
+    font-family: var(--font--principal);
+    font-size: 40px;
+    margin: 80px;
+
+}
+
+.container-footer ul{
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    list-style: none;
 }
